# rust-devops

./: AGENTS.md  Cargo.toml  LICENSE.md  README.md  ROADMAP.md  course.manifest.json
assets/: README.md
benches/: README.md  cicd_baseline.rs  deployment_strategies_baseline.rs  docker_baseline.rs  grafana_stack_baseline.rs  kubernetes_baseline.rs  observability_baseline.rs  regulated_operations_baseline.rs  release_management_baseline.rs  reliability_targets_baseline.rs  telemetry_retention_baseline.rs
diagrams/: 01-docker.mmd  02-kubernetes.mmd  03-pipelines-de-cicd.mmd  04-estrategias-de-despliegue.mmd  05-gestion-de-releases.mmd  06-observabilidad.mmd  07-stack-grafana.mmd  08-alertas-slos-y-slis.mmd  09-retencion-de-telemetria.mmd  10-operacion-en-dominios-regulados.mmd  README.md  course-map.mmd
docs/: 00-introduccion.md  01-docker.md  02-kubernetes.md  03-pipelines-de-cicd.md  04-estrategias-de-despliegue.md  05-gestion-de-releases.md  06-observabilidad.md  07-stack-grafana.md  08-alertas-slos-y-slis.md  09-retencion-de-telemetria.md  10-operacion-en-dominios-regulados.md  11-publicacion-candidata.md  SUMMARY.md
examples/: README.md  cicd.rs  deployment_strategies.rs  docker.rs  grafana_stack.rs  kubernetes.rs  observability.rs  regulated_operations.rs  release_management.rs  reliability_targets.rs  telemetry_retention.rs
examples/soluciones/: cicd_nivel_1.rs  cicd_nivel_2.rs  cicd_nivel_3.rs  deployment_strategies_nivel_1.rs  deployment_strategies_nivel_2.rs  deployment_strategies_nivel_3.rs  docker_nivel_1.rs  docker_nivel_2.rs  docker_nivel_3.rs  grafana_stack_nivel_1.rs  grafana_stack_nivel_2.rs  grafana_stack_nivel_3.rs  kubernetes_nivel_1.rs  kubernetes_nivel_2.rs  kubernetes_nivel_3.rs  observability_nivel_1.rs  observability_nivel_2.rs  observability_nivel_3.rs  regulated_operations_nivel_1.rs  regulated_operations_nivel_2.rs  regulated_operations_nivel_3.rs  release_management_nivel_1.rs  release_management_nivel_2.rs  release_management_nivel_3.rs  reliability_targets_nivel_1.rs  reliability_targets_nivel_2.rs  reliability_targets_nivel_3.rs  telemetry_retention_nivel_1.rs  telemetry_retention_nivel_2.rs  telemetry_retention_nivel_3.rs
src/: cicd.rs  deployment_strategies.rs  docker.rs  grafana_stack.rs  kubernetes.rs  lib.rs  observability.rs  regulated_operations.rs  release_management.rs  reliability_targets.rs  telemetry_retention.rs
tests/: README.md  course_manifest.rs  course_map.rs
