[package]
name = "rust-devops"
version = "0.1.0"
edition = "2024"
description = "Curso de DevOps de Jeresoft Academy: CI/CD, contenedores, Kubernetes, observabilidad y operación."
license = "MIT OR Apache-2.0"
repository = "https://github.com/jeresoftx/rust-devops"
readme = "README.md"
keywords = ["devops", "rust", "academy", "observability", "kubernetes"]
categories = ["development-tools"]

[dependencies]

[[example]]
name = "docker_nivel_1"
path = "examples/soluciones/docker_nivel_1.rs"

[[example]]
name = "docker_nivel_2"
path = "examples/soluciones/docker_nivel_2.rs"

[[example]]
name = "docker_nivel_3"
path = "examples/soluciones/docker_nivel_3.rs"

[[example]]
name = "kubernetes_nivel_1"
path = "examples/soluciones/kubernetes_nivel_1.rs"

[[example]]
name = "kubernetes_nivel_2"
path = "examples/soluciones/kubernetes_nivel_2.rs"

[[example]]
name = "kubernetes_nivel_3"
path = "examples/soluciones/kubernetes_nivel_3.rs"

[[example]]
name = "cicd_nivel_1"
path = "examples/soluciones/cicd_nivel_1.rs"

[[example]]
name = "cicd_nivel_2"
path = "examples/soluciones/cicd_nivel_2.rs"

[[example]]
name = "cicd_nivel_3"
path = "examples/soluciones/cicd_nivel_3.rs"

[[example]]
name = "deployment_strategies_nivel_1"
path = "examples/soluciones/deployment_strategies_nivel_1.rs"

[[example]]
name = "deployment_strategies_nivel_2"
path = "examples/soluciones/deployment_strategies_nivel_2.rs"

[[example]]
name = "deployment_strategies_nivel_3"
path = "examples/soluciones/deployment_strategies_nivel_3.rs"

[[example]]
name = "release_management_nivel_1"
path = "examples/soluciones/release_management_nivel_1.rs"

[[example]]
name = "release_management_nivel_2"
path = "examples/soluciones/release_management_nivel_2.rs"

[[example]]
name = "release_management_nivel_3"
path = "examples/soluciones/release_management_nivel_3.rs"

[[example]]
name = "observability_nivel_1"
path = "examples/soluciones/observability_nivel_1.rs"

[[example]]
name = "observability_nivel_2"
path = "examples/soluciones/observability_nivel_2.rs"

[[example]]
name = "observability_nivel_3"
path = "examples/soluciones/observability_nivel_3.rs"

[[example]]
name = "grafana_stack_nivel_1"
path = "examples/soluciones/grafana_stack_nivel_1.rs"

[[example]]
name = "grafana_stack_nivel_2"
path = "examples/soluciones/grafana_stack_nivel_2.rs"

[[example]]
name = "grafana_stack_nivel_3"
path = "examples/soluciones/grafana_stack_nivel_3.rs"

[[example]]
name = "reliability_targets_nivel_1"
path = "examples/soluciones/reliability_targets_nivel_1.rs"

[[example]]
name = "reliability_targets_nivel_2"
path = "examples/soluciones/reliability_targets_nivel_2.rs"

[[example]]
name = "reliability_targets_nivel_3"
path = "examples/soluciones/reliability_targets_nivel_3.rs"

[[example]]
name = "telemetry_retention_nivel_1"
path = "examples/soluciones/telemetry_retention_nivel_1.rs"

[[example]]
name = "telemetry_retention_nivel_2"
path = "examples/soluciones/telemetry_retention_nivel_2.rs"

[[example]]
name = "telemetry_retention_nivel_3"
path = "examples/soluciones/telemetry_retention_nivel_3.rs"

[[example]]
name = "regulated_operations_nivel_1"
path = "examples/soluciones/regulated_operations_nivel_1.rs"

[[example]]
name = "regulated_operations_nivel_2"
path = "examples/soluciones/regulated_operations_nivel_2.rs"

[[example]]
name = "regulated_operations_nivel_3"
path = "examples/soluciones/regulated_operations_nivel_3.rs"

[[bench]]
name = "docker_baseline"
path = "benches/docker_baseline.rs"
harness = false

[[bench]]
name = "kubernetes_baseline"
path = "benches/kubernetes_baseline.rs"
harness = false

[[bench]]
name = "cicd_baseline"
path = "benches/cicd_baseline.rs"
harness = false

[[bench]]
name = "deployment_strategies_baseline"
path = "benches/deployment_strategies_baseline.rs"
harness = false

[[bench]]
name = "release_management_baseline"
path = "benches/release_management_baseline.rs"
harness = false

[[bench]]
name = "observability_baseline"
path = "benches/observability_baseline.rs"
harness = false

[[bench]]
name = "grafana_stack_baseline"
path = "benches/grafana_stack_baseline.rs"
harness = false

[[bench]]
name = "reliability_targets_baseline"
path = "benches/reliability_targets_baseline.rs"
harness = false

[[bench]]
name = "telemetry_retention_baseline"
path = "benches/telemetry_retention_baseline.rs"
harness = false

[[bench]]
name = "regulated_operations_baseline"
path = "benches/regulated_operations_baseline.rs"
harness = false
